Katalon Test Orderproduct

--- a/UAT/Orderproduct/Orderproduct.html
+++ b/UAT/Orderproduct/Orderproduct.html
@@ -25,6 +25,8 @@
 </tr>
 <tr><td>click</td><td>link=Sign In<datalist><option>link=Sign In</option><option>//div[@id='root']/div/main/div/form/a</option><option>//a[contains(@href, '/signinorderproduct')]</option><option>//a</option><option>css=a.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-submit-17.MuiButton-containedPrimary.MuiButton-fullWidth</option></datalist></td><td></td>
 </tr>
+<tr><td>assertText</td><td>//div[@id='root']/div/main/h1<datalist><option>//div[@id='root']/div/main/h1</option><option>//h1</option><option>css=h1.MuiTypography-root.MuiTypography-h2.MuiTypography-colorTextPrimary.MuiTypography-gutterBottom.MuiTypography-alignCenter</option></datalist></td><td>คุณ Poommin Phinphimai</td>
+</tr>
 <tr><td>click</td><td>//div[@id='root']/div/main[2]/div/div[2]/div/div[3]/a/span<datalist><option>//div[@id='root']/div/main[2]/div/div[2]/div/div[3]/a/span</option><option>//div[2]/div/div[3]/a/span</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=Equipment_id<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=Equipment_id</option></datalist></td><td></td>
@@ -100,6 +102,8 @@
 <tr><td>type</td><td>id=password<datalist><option>id=password</option><option>name=password</option><option>//input[@id='password']</option><option>//div[@id='root']/div/main/div/form/div[2]/div/input</option><option>//div[2]/div/input</option><option>css=#password</option></datalist></td><td>1234</td>
 </tr>
 <tr><td>click</td><td>link=Sign In<datalist><option>link=Sign In</option><option>//div[@id='root']/div/main/div/form/a</option><option>//a[contains(@href, '/signinorderproduct')]</option><option>//a</option><option>css=a.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-submit-17.MuiButton-containedPrimary.MuiButton-fullWidth</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='root']/div/main/h1<datalist><option>//div[@id='root']/div/main/h1</option><option>//h1</option><option>css=h1.MuiTypography-root.MuiTypography-h2.MuiTypography-colorTextPrimary.MuiTypography-gutterBottom.MuiTypography-alignCenter</option></datalist></td><td>คุณ Poommin Phinphimai</td>
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/main[2]/div/div[2]/div/div[3]/a/span<datalist><option>//div[@id='root']/div/main[2]/div/div[2]/div/div[3]/a/span</option><option>//div[2]/div/div[3]/a/span</option></datalist></td><td></td>
 </tr>
