--- a/UAT/EmployeeWorkingHours/Failure Test Case.html
+++ b/UAT/EmployeeWorkingHours/Failure Test Case.html
@@ -11,13 +11,11 @@
 <tr><td rowspan="1" colspan="3">Untitled Test Case</td></tr>
 </thead>
 <tbody>
-<tr><td>open</td><td>http://localhost:3000/<datalist><option>http://localhost:3000/</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>link=ตารางเวลาทำงานพนักงาน<datalist><option>link=ตารางเวลาทำงานพนักงาน</option><option>//div[@id='root']/div/div[2]/article/div[2]/a</option><option>//a[contains(@href, '/Create')]</option><option>//div[2]/a</option><option>css=a.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedSecondary</option></datalist></td><td></td>
+<tr><td>open</td><td>http://localhost:3000/EmployeeWorkingHours<datalist><option>http://localhost:3000/EmployeeWorkingHours</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-Employee<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-Employee</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-Employee']/div[3]/ul/li[2]<datalist><option>//div[@id='menu-Employee']/div[3]/ul/li[2]</option><option>//li[2]</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-Employee']/div[3]/ul/li<datalist><option>//div[@id='menu-Employee']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-Day<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-Day</option></datalist></td><td></td>
 </tr>
@@ -25,9 +23,9 @@
 </tr>
 <tr><td>click</td><td>id=mui-component-select-Shift<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-Shift</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-Shift']/div[3]/ul/li<datalist><option>//div[@id='menu-Shift']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-Shift']/div[3]/ul/li[2]<datalist><option>//div[@id='menu-Shift']/div[3]/ul/li[2]</option><option>//li[2]</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/div[2]/article/div/div/div[11]/button/span<datalist><option>//div[@id='root']/div/div[2]/article/div/div/div[11]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='root']/div/div/article/div/div/div[11]/button/span<datalist><option>//div[@id='root']/div/div/article/div/div/div[11]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>บันทึกข้อมูลไม่สำเร็จ</td>
 </tr>
