--- a/UAT/EmployeeWorkingHours/Success Test Case.html
+++ b/UAT/EmployeeWorkingHours/Success Test Case.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<title>Untitled Test Suite</title>
+	<title>Failure Test Case</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -11,27 +11,25 @@
 <tr><td rowspan="1" colspan="3">Success Test Case</td></tr>
 </thead>
 <tbody>
-<tr><td>open</td><td>http://localhost:3000/<datalist><option>http://localhost:3000/</option></datalist></td><td></td>
+<tr><td>open</td><td>http://localhost:3000/EmployeeWorkingHours<datalist><option>http://localhost:3000/EmployeeWorkingHours</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>link=ตารางเวลาทำงานพนักงาน<datalist><option>link=ตารางเวลาทำงานพนักงาน</option><option>//div[@id='root']/div/div[2]/article/div[2]/a</option><option>//a[contains(@href, '/Create')]</option><option>//div[2]/a</option><option>css=a.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedSecondary</option></datalist></td><td></td>
+<tr><td>click</td><td>id=mui-component-select-Employee<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-Employee</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=mui-component-select-Employee<datalist><option>id=mui-component-select-Employee</option><option>//div[@id='mui-component-select-Employee']</option><option>//div[@id='root']/div/div[2]/article/div/div/div[3]/div/div/div</option><option>//div[3]/div/div/div</option><option>css=#mui-component-select-Employee</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>//div[@id='menu-Employee']/div[3]/ul/li<datalist><option>//div[@id='menu-Employee']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-Employee']/div[3]/ul/li[2]<datalist><option>//div[@id='menu-Employee']/div[3]/ul/li[2]</option><option>//li[2]</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-Day<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-Day</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-Day']/div[3]/ul/li[2]<datalist><option>//div[@id='menu-Day']/div[3]/ul/li[2]</option><option>//li[2]</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-Day']/div[3]/ul/li[3]<datalist><option>//div[@id='menu-Day']/div[3]/ul/li[3]</option><option>//li[3]</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-Shift<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-Shift</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-Shift']/div[3]/ul/li[2]<datalist><option>//div[@id='menu-Shift']/div[3]/ul/li[2]</option><option>//li[2]</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-Shift']/div[3]/ul/li<datalist><option>//div[@id='menu-Shift']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=mui-component-select-Role<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-Role</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-Role']/div[3]/ul/li[4]<datalist><option>//div[@id='menu-Role']/div[3]/ul/li[4]</option><option>//li[4]</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='menu-Role']/div[3]/ul/li[3]<datalist><option>//div[@id='menu-Role']/div[3]/ul/li[3]</option><option>//li[3]</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/div[2]/article/div/div/div[11]/button/span<datalist><option>//div[@id='root']/div/div[2]/article/div/div/div[11]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>click</td><td>//button[@type='button']<datalist><option>//button[@type='button']</option><option>//div[@id='root']/div/div/article/div/div/div[11]/button</option><option>//button</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>บันทึกข้อมูลสำเร็จ</td>
 </tr>
