Add test searchoderproduct Katalon -close #104

--- a/UAT/Orderproduct/Searchorderproduct.html
+++ b/UAT/Orderproduct/Searchorderproduct.html
@@ -21,7 +21,7 @@
 </tr>
 <tr><td>assertText</td><td>//div[2]/div<datalist><option>//div[2]/div</option><option>css=div.swal2-popup.swal2-toast.swal2-icon-success.swal2-show</option></datalist></td><td>ค้นหาข้อมูลสำเร็จ</td>
 </tr>
-<tr><td>assertText</td><td>//div[@id='root']/div/div/div[5]/table/tbody/tr/td[3]<datalist><option>//div[@id='root']/div/div/div[5]/table/tbody/tr/td[3]</option><option>//td[3]</option></datalist></td><td>B</td>
+<tr><td>assertText</td><td>//div[@id='root']/div/div/div[5]/table/tbody/tr/td[3]<datalist><option>//div[@id='root']/div/div/div[5]/table/tbody/tr/td[3]</option><option>//td[3]</option></datalist></td><td>แชมพู</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
