update search salary and UAT

--- a/UAT/Salary/Search test Suite.html
+++ b/UAT/Salary/Search test Suite.html
@@ -13,11 +13,11 @@
 <tbody>
 <tr><td>open</td><td>http://localhost:3000/Salary/Search<datalist><option>http://localhost:3000/Salary/Search</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=Equipment_id<datalist><option>//body</option><option>css=body</option><option>id=Equipment_id</option></datalist></td><td></td>
+<tr><td>click</td><td>id=employee<datalist><option>id=employee</option><option>//input[@id='employee']</option><option>//div[@id='root']/div/div/div[2]/div/div/div[11]/div/div/div/input</option><option>//input</option><option>css=#employee</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-']/div[3]/ul/li<datalist><option>id=Equipment_id</option><option>//div[@id='Equipment_id']</option><option>//div[@id='root']/div/div/div[2]/div/div/div[12]/div/div</option><option>//div[12]/div/div</option><option>css=#Equipment_id</option><option>//div[@id='menu-']/div[3]/ul/li</option></datalist></td><td></td>
+<tr><td>type</td><td>id=employee<datalist><option>id=employee</option><option>//input[@id='employee']</option><option>//div[@id='root']/div/div/div[2]/div/div/div[11]/div/div/div/input</option><option>//input</option><option>css=#employee</option></datalist></td><td>Poo</td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/div/div[2]/div/div/div[18]/button/span<datalist><option>//div[@id='root']/div/div/div[2]/div/div/div[18]/button/span</option><option>//button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-8.MuiButton-containedSecondary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='root']/div/div/div[2]/div/div/div[17]/button/span<datalist><option>//div[@id='root']/div/div/div[2]/div/div/div[17]/button/span</option><option>//button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-8.MuiButton-containedSecondary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//div[2]/div/div/h2</option><option>css=#swal2-title</option></datalist></td><td>ค้นหาข้อมูลสำเร็จ</td>
 </tr>
@@ -29,13 +29,13 @@
 <tbody>
 <tr><td>open</td><td>http://localhost:3000/Salary/Search<datalist><option>http://localhost:3000/Salary/Search</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=Equipment_id<datalist><option>id=Equipment_id</option><option>//body</option><option>css=body</option></datalist></td><td></td>
+<tr><td>click</td><td>id=employee<datalist><option>id=employee</option><option>//input[@id='employee']</option><option>//div[@id='root']/div/div/div[2]/div/div/div[11]/div/div/div/input</option><option>//input</option><option>css=#employee</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-']/div[3]/ul/li[2]<datalist><option>//div[@id='menu-']/div[3]/ul/li</option><option>id=Equipment_id</option><option>//div[@id='Equipment_id']</option><option>//div[@id='root']/div/div/div[2]/div/div/div[12]/div/div</option><option>//div[12]/div/div</option><option>css=#Equipment_id</option><option>//div[@id='menu-']/div[3]/ul/li[2]</option></datalist></td><td></td>
+<tr><td>type</td><td>id=employee<datalist><option>id=employee</option><option>//input[@id='employee']</option><option>//div[@id='root']/div/div/div[2]/div/div/div[11]/div/div/div/input</option><option>//input</option><option>css=#employee</option></datalist></td><td>PPP</td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/div/div[2]/div/div/div[18]/button/span<datalist><option>//div[@id='root']/div/div/div[2]/div/div/div[18]/button/span</option><option>//button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-8.MuiButton-containedSecondary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='root']/div/div/div[2]/div/div/div[17]/button/span<datalist><option>//div[@id='root']/div/div/div[2]/div/div/div[17]/button/span</option><option>//button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-8.MuiButton-containedSecondary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//div[2]/div/div/h2</option><option>css=#swal2-title</option></datalist></td><td>ค้นหาข้อมูลไม่พบ</td>
+<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//div[2]/div/div/h2</option><option>css=#swal2-title</option></datalist></td><td>ไม่พบข้อมูลที่ค้นหา</td>
 </tr>
 </tbody></table>
 </body>
