--- a/UAT/EmployeeWorkingHours/Search Test Case.html
+++ b/UAT/EmployeeWorkingHours/Search Test Case.html
@@ -13,11 +13,13 @@
 <tbody>
 <tr><td>open</td><td>http://localhost:3000/SearchEmployeeWorkingHours<datalist><option>http://localhost:3000/SearchEmployeeWorkingHours</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=Employee_id<datalist><option>id=Employee_id</option><option>//div[@id='Employee_id']</option><option>//div[@id='root']/div/div/div/div[2]/div/div/div[6]/div/div</option><option>//div[6]/div/div</option><option>css=#Employee_id</option></datalist></td><td></td>
+<tr><td>click</td><td>id=Employee_id<datalist><option>id=Employee_id</option><option>//input[@id='Employee_id']</option><option>//div[@id='root']/div/div/div/div[2]/div/div/div[6]/div/div/input</option><option>//input</option><option>css=#Employee_id</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-']/div[3]/ul/li<datalist><option>//div[@id='menu-']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
+<tr><td>type</td><td>id=Employee_id<datalist><option>id=Employee_id</option><option>//input[@id='Employee_id']</option><option>//div[@id='root']/div/div/div/div[2]/div/div/div[6]/div/div/input</option><option>//input</option><option>css=#Employee_id</option></datalist></td><td>Poo</td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/div/div/div[2]/div/div/div[12]/button/span<datalist><option>//div[@id='root']/div/div/div/div[2]/div/div/div[12]/button/span</option><option>//button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-80.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>type</td><td>id=Employee_id<datalist><option>id=Employee_id</option><option>//input[@id='Employee_id']</option><option>//div[@id='root']/div/div/div/div[2]/div/div/div[6]/div/div/input</option><option>//input</option><option>css=#Employee_id</option></datalist></td><td>Poomin</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/div/div/div[2]/div/div/div[12]/button/span<datalist><option>//div[@id='root']/div/div/div/div[2]/div/div/div[12]/button/span</option><option>//button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-7.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//div[2]/div/div/h2</option><option>css=#swal2-title</option></datalist></td><td>ค้นหาข้อมูลสำเร็จ</td>
 </tr>
@@ -29,13 +31,13 @@
 <tbody>
 <tr><td>open</td><td>http://localhost:3000/SearchEmployeeWorkingHours<datalist><option>http://localhost:3000/SearchEmployeeWorkingHours</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=Employee_id<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=Employee_id</option></datalist></td><td></td>
+<tr><td>click</td><td>id=Employee_id<datalist><option>id=Employee_id</option><option>//input[@id='Employee_id']</option><option>//div[@id='root']/div/div/div/div[2]/div/div/div[6]/div/div/input</option><option>//input</option><option>css=#Employee_id</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-']/div[3]/ul/li[2]<datalist><option>//div[@id='menu-']/div[3]/ul/li[2]</option><option>//li[2]</option></datalist></td><td></td>
+<tr><td>type</td><td>id=Employee_id<datalist><option>id=Employee_id</option><option>//input[@id='Employee_id']</option><option>//div[@id='root']/div/div/div/div[2]/div/div/div[6]/div/div/input</option><option>//input</option><option>css=#Employee_id</option></datalist></td><td>Arum</td>
 </tr>
-<tr><td>click</td><td>css=span.MuiButton-startIcon.MuiButton-iconSizeLarge &gt; svg.MuiSvgIcon-root<datalist><option>css=span.MuiButton-startIcon.MuiButton-iconSizeLarge &gt; svg.MuiSvgIcon-root</option></datalist></td><td></td>
+<tr><td>click</td><td>//button[@type='button']<datalist><option>//button[@type='button']</option><option>//div[@id='root']/div/div/div/div[2]/div/div/div[12]/button</option><option>//button</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-7.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//div[2]/div/div/h2</option><option>css=#swal2-title</option></datalist></td><td>ไม่พบข้อมูลในระบบ</td>
+<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//div[2]/div/div/h2</option><option>css=#swal2-title</option></datalist></td><td>ไม่พบข้อมูลที่ค้นหา</td>
 </tr>
 </tbody></table>
 </body>
