--- a/UAT/OrderOnline/SearchFail.html
+++ b/UAT/OrderOnline/SearchFail.html
@@ -32,10 +32,9 @@ WebUI.openBrowser('https://www.google.com/')
 def driver = DriverFactory.getWebDriver()
 String baseUrl = "https://www.google.com/"
 selenium = new WebDriverBackedSelenium(driver, baseUrl)
-selenium.open("http://localhost:3000/SignInOrderonline")
-selenium.click("id=email")
-selenium.type("id=email", "TJ@gmail.com")
-selenium.click("id=password")
-selenium.type("id=password", "5555")
-selenium.click("//div[@id='root']/div/article/main/div/form/a/span")
-assertEquals("ไม่พบข้อมูลในระบบ", selenium.getText("//div[@id='root']/div/article/div/div[2]/div/div/div[2]"));
+selenium.open("http://localhost:3000/Orderonline")
+selenium.click("//div[@id='root']/div/div/article/div[2]/form/div/td[3]/a/span")
+selenium.click("id=product")
+selenium.type("id=product", "สบู่")
+selenium.click("//div[@id='root']/div/div/article/div/form/div/div/div/td/button/span")
+assertEquals("ค้นหาข้อมูลไม่พบ", selenium.getText("id=swal2-title"));
