--- a/UAT/OrderOnline/lab/add data.html
+++ b/UAT/OrderOnline/lab/add data.html
@@ -151,7 +151,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/div/article/div[2]/form/div/td/a/span<datalist><option>//div[@id='root']/div/div/article/div[2]/form/div/td/a/span</option><option>//td/a/span</option><option>css=a.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-margin-4.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>กรุณาจำนวนสินค้าที่ต้องการ</td>
+<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>กรอกจำนวนสินค้าที่ต้องการ</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
