--- a/UAT/Stock/TestSprint1(Stock).html
+++ b/UAT/Stock/TestSprint1(Stock).html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<title>Stocktest</title>
+	<title>TestSprint1(Stock)</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -99,7 +99,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/div/article/div/div/div[25]/button/span<datalist><option>//div[@id='root']/div/div/article/div/div/div[25]/button/span</option><option>//div[25]/button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-outlined.MuiButton-colorInherit.MuiButton-outlinedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>ID Stock ขึ้นต้นด้วยตัวอักษร A-Z และตัวเลขจำนวน 6 ตัว</td>
+<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>ID Stock ขึ้นต้นด้วยตัวอักษร A-Z และตัวเลขจำนวน 6 ตัว กรุณากรอกให้ถูกต้อง</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
