Katalon Test SearchOrderproductUpdate  -close #104

--- a/UAT/Orderproduct/Searchorderproduct.html
+++ b/UAT/Orderproduct/Searchorderproduct.html
@@ -13,15 +13,17 @@
 <tbody>
 <tr><td>open</td><td>http://localhost:3000/searchorderproduct<datalist><option>http://localhost:3000/searchorderproduct</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=Equipment_id<datalist><option>id=Equipment_id</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
+<tr><td>click</td><td>id=product<datalist><option>id=product</option><option>//input[@id='product']</option><option>//div[@id='root']/div/div/div[3]/div/div/div[12]/div/div/div/input</option><option>//input</option><option>css=#product</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-']/div[3]/ul/li[2]<datalist><option>//div[@id='menu-']/div[3]/ul/li[2]</option><option>//li[2]</option></datalist></td><td></td>
+<tr><td>type</td><td>id=product<datalist><option>id=product</option><option>//input[@id='product']</option><option>//div[@id='root']/div/div/div[3]/div/div/div[12]/div/div/div/input</option><option>//input</option><option>css=#product</option></datalist></td><td>สบู่</td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/div/div[3]/div/div/div[18]/button/span<datalist><option>//div[@id='root']/div/div/div[3]/div/div/div[18]/button/span</option><option>//div[18]/button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-8.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>sendKeys</td><td>id=product<datalist><option>id=product</option><option>//input[@id='product']</option><option>//div[@id='root']/div/div/div[3]/div/div/div[12]/div/div/div/input</option><option>//input</option><option>css=#product</option></datalist></td><td>${KEY_ENTER}</td>
+</tr>
+<tr><td>click</td><td>//div[@id='root']/div/div/div[3]/div/div/div[17]/button/span<datalist><option>//div[@id='root']/div/div/div[3]/div/div/div[17]/button/span</option><option>//div[17]/button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-8.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>//div[2]/div<datalist><option>//div[2]/div</option><option>css=div.swal2-popup.swal2-toast.swal2-icon-success.swal2-show</option></datalist></td><td>ค้นหาข้อมูลสำเร็จ</td>
 </tr>
-<tr><td>assertText</td><td>//div[@id='root']/div/div/div[5]/table/tbody/tr/td[3]<datalist><option>//div[@id='root']/div/div/div[5]/table/tbody/tr/td[3]</option><option>//td[3]</option></datalist></td><td>แชมพู</td>
+<tr><td>assertText</td><td>//div[@id='root']/div/div/div[5]/div/div/div/table/tbody/tr/td[3]<datalist><option>//div[@id='root']/div/div/div[5]/div/div/div/table/tbody/tr/td[3]</option><option>//td[3]</option></datalist></td><td>สบู่</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -31,13 +33,15 @@
 <tbody>
 <tr><td>open</td><td>http://localhost:3000/searchorderproduct<datalist><option>http://localhost:3000/searchorderproduct</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=Equipment_id<datalist><option>id=Equipment_id</option><option>//body</option><option>css=body.vsc-initialized</option></datalist></td><td></td>
+<tr><td>click</td><td>id=product<datalist><option>id=product</option><option>//input[@id='product']</option><option>//div[@id='root']/div/div/div[3]/div/div/div[12]/div/div/div/input</option><option>//input</option><option>css=#product</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-']/div[3]/ul/li[4]<datalist><option>//div[@id='menu-']/div[3]/ul/li[4]</option><option>//div[@id='menu-']/div[3]/ul/li[2]</option><option>//li[2]</option></datalist></td><td></td>
+<tr><td>type</td><td>id=product<datalist><option>id=product</option><option>//input[@id='product']</option><option>//div[@id='root']/div/div/div[3]/div/div/div[12]/div/div/div/input</option><option>//input</option><option>css=#product</option></datalist></td><td>ไก่ทอด</td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/div/div[3]/div/div/div[18]/button/span<datalist><option>//div[@id='root']/div/div/div[3]/div/div/div[18]/button/span</option><option>//div[18]/button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-8.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>sendKeys</td><td>id=product<datalist><option>id=product</option><option>//input[@id='product']</option><option>//div[@id='root']/div/div/div[3]/div/div/div[12]/div/div/div/input</option><option>//input</option><option>css=#product</option></datalist></td><td>${KEY_ENTER}</td>
 </tr>
-<tr><td>assertText</td><td>//div[2]/div<datalist><option>//div[2]/div</option><option>css=div.swal2-popup.swal2-toast.swal2-icon-success.swal2-show</option></datalist></td><td>ค้นหาข้อมูลไม่พบ</td>
+<tr><td>click</td><td>//div[@id='root']/div/div/div[3]/div/div/div[17]/button/span<datalist><option>//div[@id='root']/div/div/div[3]/div/div/div[17]/button/span</option><option>//div[17]/button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.makeStyles-button-8.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[2]/div<datalist><option>//div[2]/div</option><option>css=div.swal2-popup.swal2-toast.swal2-icon-success.swal2-show</option></datalist></td><td>ไม่พบข้อมูลที่ค้นหา</td>
 </tr>
 </tbody></table>
 </body>
