--- a/UAT/EmployeeWorkingHours/Save Test Case.html
+++ b/UAT/EmployeeWorkingHours/Save Test Case.html
@@ -163,7 +163,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/div/div[2]/div/div/div/div[22]/button/span<datalist><option>//div[@id='root']/div/div/div[2]/div/div/div/div[22]/button/span</option><option>//div[22]/button/span</option><option>css=button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedPrimary.MuiButton-containedSizeLarge.MuiButton-sizeLarge &gt; span.MuiButton-label</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>รหัสพนักงานขึ้นต้นด้วย A,B,C ตามด้วยเลข 7 หลัก</td>
+<tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>รหัสทำงานขึ้นต้นด้วย A,B,C ตามด้วยเลข 7 หลัก</td>
 </tr>
 </tbody></table>
 </body>
